--- a/test/Dockerfile-test
+++ b/test/Dockerfile-test
@@ -11,8 +11,6 @@ COPY Gemfile /home/app/webapp/Gemfile
 COPY Gemfile.lock /home/app/webapp/Gemfile.lock
 COPY package.json /home/app/webapp/package.json
 COPY yarn.lock /home/app/webapp/yarn.lock
-RUN chmod a+w /home/app/webapp/yarn.lock
-RUN chmod a+w /home/app/webapp/node_modules/.yarn-integrity
 
 RUN bundle install
-RUN sudo -E -u app -H yarn install
+RUN yarn install
