addressing PR comments re: worker cache

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -25,6 +25,8 @@ services:
     environment:
       RAILS_ENV: development
       VITE_RUBY_HOST: 0.0.0.0
+      VITE_FRONTEND_SERVICE_WORKER_CACHE: "${VITE_FRONTEND_SERVICE_WORKER_CACHE}"
+      VITE_DEV_MODE: "\"docker-compose\"" # extra quotes are to encode as JSON string value
     ports:
       - 3036:3036
     volumes:
